XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>

* Version X.X.X
* Bump jedi version to 0.12.1

2018 Aug 13 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.2.4
* Fix: default application CSS adjustments
* Rubber band selection on the graphics pane

2018 May 25 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.2.3
* Bug fix: IDE does not start after installation (second try)

2018 May 17 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.2.2
* Bug fix: IDE does not start after installation
* Preliminary rubber band UI on the graphics pane

2018 May 11 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.2.1
* Bug fix: incorrect recent files loading (regression)
* New feature: grouping items on the graphics pane

2018 Apr 29 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.2.0
* Text-to-graphics group support: empty/collapsed/expanded groups.
* Bug fix: cloning of a tab content
* Bug fix: incorrect saving encoding when a new file overwrites an existing one
* Bug fix: incorrect item width on smart zoom 1 when scale is changed
* Recent files list is populated when there is no project
* Minor improvements

2018 Jan 11 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.1.0
* Proportional change of spacings when a mono font changed for the flow UI
* New feature: show/hide comments/docstrings/except blocks on the flowUI
* More flexible pyflakes suppression line
* New feature: smart zoom; four levels are available now:
  - full view
  - no content, no comment, no docstring
  - no content, no comment, no docstring, no plain items, no decorators
  - only top level classes and functions
* Minor bug fixes

2017 Dec 3 Sergey Satskiy <sergey.satskiy@gmail.com>

* Verion 4.0.4
* Better approach to setup.py (on some systems it did not work as expected)

2017 Nov 30 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.0.3
* Cosmetic changes (pep8 compatibility)
* New flow setting to enable CML indicators on the diagram (default: False)